<resources>
    <string name="app_name">PSPolitics</string>
    <string name="News">News</string>
    <string name="Party">Party</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">Jaipur, Oct 17 ( PTI) The Rajasthan government
        today announced an ad-hoc bonus to all state government employees
        which would be twice what was given the previous financial year.
About six lakh employees would be benefited by the decision taken by Chief Minister Vasundhara Raje, a release issued here said.</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="about_nitin">Nitin Shelke grew up in the town of Wadegon in India,
        the son of a street merchant. He entered politics as a youth and
        quickly rose through the ranks of Rashtriya Swayamsevak Sangh,
        a Hindu nationalist political party. Shelke later joined the mainstream Bharatiya Janata Party in 2005,
        eventually becoming national secretary. In 2010, he was alleged to be responsible for the deaths of more than 1,000
        Muslims during civil unrest but was later exonerated.
        Nitin Shelke was born in the small town of Wadegon, in  Maharastra, India.
        His father was a street merchant who struggled to support the family. Young Nitin and
        his brother sold tea near a bus terminal to help out.
        Though an average student in school, Shelke spent hours in the library and was known as a strong debater.
        In his early teens, he joined Akhil Bharatiya Vidyarthi Parishad,
        the student wing of Rashtriya Swayamsevak Sangh (RSS),
        a Hindu nationalist political party. </string>
    <string name="about_party">The Bharatiya Janata Party is today the most prominent member of the family of organisations known as the "Sangh Parivar" and nurtured by the Rashtria Swyamsevak Sangh (RSS). Like the RSS, the BJP is wedded to India’s unity and integrity, its intrinsic identity and the social strength, individual character and cultural uniqueness that have been the hallmark of this great country and its people for millennia.

History is the philosophy of nations. And the Sangh Parivar has a very clear and clear conception of Indian history. Here was a great civilization whose influence and imprint spread from Sri Lanka to Tibet, from Southeast Asia to Central Asia, from one end of the Indian Ocean to the other. It weathered the storms of invaders, from the Greeks to the Huns, from the Shakas to the Islamic armies of Turks and Afghans. It fought and resisted external oppression and its essential civilization and culture survived great challenges and attempts at effacement. The glory of Vijayanagara and the heroism of Maharana Pratap, of a Shivaji and of a Guru Govind Singh are testimony to the Indian spirit.</string>
    <string name="title_loading">Please Wait</string>
    <string name="msg_loading">Loading movies list…</string>
    <string name="titel">Voting Center</string>
    <string name="action_language">Language</string>
    <string name="actins_marathi">मराठी</string>
    <string name="actins_hindi">हिदी</string>
    <string name="actions_english">English</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_devinfo">Developer</string>
    <string name="share_app">Share App</string>
    <string name="language_setting">Change Language</string>
    <string name="action_change_pass">Change Password</string>
    <string name="actins_eng">English</string>
    <string name="actins_hn">हिदी</string>
    <string name="actins_mr">मराठी</string>
    <string name="actins_fr">français</string>
    <string name="actins_es">
Español</string>
    <string name="PersonalInfo">Personal Info</string>
    <string name="Gallery">Gallery</string>
    <string name="AboutNitinShelke">About Nitin Shelke</string>
    <string name="SocialWork">Social work</string>
    <string name="Rally">Rally</string>
    <string name="VotingSchedule">Voting Schedule</string>
    <string name="VotingCenters">Voting Centers</string>
    <string name="VotingList">Voting List</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="Communicate">Communicate</string>
    <string name="Election">Election</string>
    <string name="TreePlantationAtWadego">Tree Plantation at Wadegon</string>
    <string name="NitinShelke">Nitin Shelke</string>
    <string name="address">Address:</string>
    <string name="Location">Location:</string>
    <string name="Date">Date :</string>
    <string name="StartTime">Start Time :</string>
    <string name="EndTime">End Time :</string>
    <string name="zp_school">Z.P Scholl</string>
    <string name="VotingDay">Voting Day:</string>
    <string name="VotingDate">Voting Date:</string>
    <string name="VotingStartTime">Voting Start Time:</string>
    <string name="VotingEndTime">Voting End Time:</string>
    <string name="SocialWorkOfNitin">Social Work of Nitin Bhaiya:</string>
    <string name="SocailDate">Date :</string>
    <string name="Rally_start_point">Rally Start Point:</string>
    <string name="Rally_End_point">Rally End Point :</string>
    <string name="Rally_Date">Rally Date:</string>
    <string name="Rally_day">Rally Day:</string>
    <string name="Rally_start_time">Rally Start Time:</string>
    <string name="Rally_end_time">Rally End Time:</string>
    <string name="wadegonchowk">Wadegon Chowk</string>
    <string name="shirurphata">Shirur Phata</string>
    <string name="date_of_rally">12/12/2016</string>
    <string name="rally_start1">11:00 AM</string>
    <string name="rally_end1">03:00 PM</string>
    <string name="rally_day1">Sunday</string>
    <string name="baner">Baner</string>
    <string name="pune_station">Pune Station</string>
    <string name="date_of_rally1">24/12/2016</string>
    <string name="rally_start2">10:00 AM</string>
    <string name="rally_end2">02:00 PM</string>
    <string name="rally_day2">Monday</string>
    <string name="karave_nagar">Katraj</string>
    <string name="hadpasr">Hadpasr</string>
    <string name="date_of_rally3">01/01/2017</string>
    <string name="rally_start3">01:00 PM</string>
    <string name="rally_end3">05:00 PM</string>
    <string name="rally_day3">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="voting_date">" 012/01/2017"</string>
    <string name="voting_start_time">07:00 AM</string>
    <string name="voting_end_time">05:00 PM</string>
    <string name="tree_date">01/04/2015</string>
    <string name="person_name">Person Name:</string>
    <string name="party_name">Party Name:</string>
    <string name="desgination">Desgination:</string>
    <string name="b_j_p">Bharatiya Janata Party</string>
    <string name="nagar_sevek">Nagar Sevak</string>
    <string name="shahadeo_chavan">Shahadeo Chavan</string>
    <string name="date_of_news">12/12/2016</string>
    <string name="time_news">11:AM</string>
    <string name="nitin_shelke_phots">NITIN SHELKE  PHOTS AT STUDIO</string>
    <string name="high_school">High Scholl</string>
    <string name="wadegon">Wadwgon</string>
    <string name="shivaji_vidyalya">Shivaji Vidyalya</string>
    <string name="shubhangi_dhole">Shubhangi Dhole</string>
    <string name="priyanka_patil">Priyanka Patil</string>
    <string name="meeting_person_name">Person Name:</string>
    <string name="Meeting">Meeting</string>
    <string name="meeting_date">12/12/2016</string>
    <string name="meeting_day">Sunday</string>
    <string name="meeting_start_time">10:Am</string>
    <string name="meeting_end_time">02:00pm</string>
    <string name="meeting_location">Wadegon</string>
    <string name="text_meeting_date">Meeting Date:</string>
    <string name="text_meeting_day">Meeting Day :</string>
    <string name="text_meeting_start">Meeting Start:</string>
    <string name="text_meeting_end">Meeting End :</string>
    <string name="text_meeting_location">Meeting Location:</string>
    <string name="text_nitin_shelke">Name:</string>
    <string name="text_education">Education:</string>
    <string name="text_working">Working          :</string>
    <string name="personal_address">Personal Address :</string>
    <string name="text_address">Address :</string>
    <string name="really_exit">Really Exit?</string>
    <string name="sure_exit">Are you sure you want to exit?</string>
    <string name="no_no">No</string>
    <string name="yes_yes">Yes</string>
    <string name="about">About Party</string>
    <string name="ask_questions">Ask Questions</string>
    <string name="contact_number">Contact Number :</string>
    <string name="office_address">Office Address :</string>

    <string name="college">College :</string>
    <string name="school">School :</string>
    <string name="first_name">Please Enter First Name </string>
    <string name="benef">
        <![CDATA[
        <html>
        <head></head>
        <body style="text-align:justify;color:gray;background-color:black;">
         "1.some text\n
          2.some text\n
          .............
 </body>
</html>
]]>
</string>
    <string name="entervalidnumber">Please Enter valid contact number</string>
</resources>
