<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/text_border">

    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border">

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="-100dp"
            android:src="@drawable/nature" />

        <ImageView
            android:id="@+id/imageViewnitin"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="160sp"
            android:background="@drawable/text_bor"
            android:src="@drawable/nitin13" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewnitin"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_nitin_shelke"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_nitin_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewnitin"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/textView"
            android:gravity="center_horizontal"
            android:text="Nitin Shelke"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/icon_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_nitin_name"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_action_store" />

        <TextView
            android:id="@+id/text_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_nitin_name"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_education"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_education_nitin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_nitin_name"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/text_education"
            android:text="nitin"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/icon_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_education_nitin"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_social_school" />

        <TextView
            android:id="@+id/text_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_education_nitin"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/school"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_school_nitin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_education_nitin"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/text_education"
            android:text="school"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/icon_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_school"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_social_school" />

        <TextView
            android:id="@+id/text_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_school"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/college"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_college_nitin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_school"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/text_college"
            android:text="college"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/img_working"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_college"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_action_store" />

        <TextView
            android:id="@+id/text_working"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_college"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_working"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_working_nitin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_college"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/text_working"
            android:text="sdfsdaf"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/img_personal_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_working"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_social_location_city" />

        <TextView
            android:id="@+id/personal_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_working"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/personal_address"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_personal_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_working_nitin"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/personal_address"
            android:text="xxcszxc"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/img_office_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_address"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_social_location_city" />

        <TextView
            android:id="@+id/office_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_address"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/office_address"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_office_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_address"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/office_address"
            android:text="xxcszxc"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/img_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/office_address"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_maps_local_phone" />

        <TextView
            android:id="@+id/text_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_office_address"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/contact_number"
            android:textColor="@color/gray"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/office_address"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/office_address"
            android:text="xxcszxc"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="normal" />
    </RelativeLayout>
</android.support.v7.widget.CardView>